--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tanstack/react-query": "^4.35.7",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.284.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
