--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
+    "react-to-print": "^2.14.15",
     "react-toastify": "^9.1.3",
     "zod": "^3.22.4"
   },
